--- a/cms/app/views/dm_cms/admin/cms_blogs/_form.html.erb
+++ b/cms/app/views/dm_cms/admin/cms_blogs/_form.html.erb
@@ -2,6 +2,7 @@
 <% unless @blog.new_record? %>
   <% content_for :content_title_extra do %>
     <%= page_header_buttons do %>
+      <%= present(@blog).visibility %>
       <%= present(@blog).label_published %>
       <%= link_to(icons(:view), blog_show_url(@blog), class: "btn btn-sm btn-default", title: 'View', target: '_blank') %>
       <div class="btn-group">
