added tags to CmsPage and major restyling of page sections

--- a/admin/app/assets/stylesheets/admin_theme/theme_customization.css
+++ b/admin/app/assets/stylesheets/admin_theme/theme_customization.css
@@ -545,6 +545,11 @@ fieldset[disabled] .btn-info.active {
   border-color: #4DA2B8;
 }
 
+/*--- information list ---*/
+
+dl.infolist dt {
+  margin-top: 10px;
+}
 
 /*--- Tag Refrence modal ---*/
 
