--- a/cms/app/views/dm_cms/admin/cms_contentitems/_form.html.erb
+++ b/cms/app/views/dm_cms/admin/cms_contentitems/_form.html.erb
@@ -1,3 +1,4 @@
+<% content_for :content_title, present(@current_page).admin_edit_title %>
 <% new_record = @cms_contentitem.new_record? %>
 <% submit_url = (new_record ? create_content_admin_cms_contentitem_path(@current_page) : admin_cms_contentitem_path(@cms_contentitem)) %>
 <% title      = (new_record ? "New Content" : @cms_contentitem.container.capitalize) %>
@@ -5,44 +6,44 @@
 <% content_for :content_title_extra do %>
   <%= page_header_buttons do %>
     <%= link_to icons(:view), url_for("/#{current_account.preferred_default_locale}/#{@current_page.slug}"), title: 'View Page', class: 'btn btn-sm btn-default', target: '_blank' %>
+    <div class="btn-group">
+      <button class="btn btn-default btn-sm dropdown-toggle" data-toggle="dropdown"><%= icons(:cog) %> <span class="caret"></span></button>
+      <ul class="dropdown-menu dropdown-menu-right icons-right">
+        <% if can?(:manage_content, :all) && !@cms_contentitem.new_record? %>
+          <li class="text-danger"><%= link_to icon_label(:delete, 'Delete Content', icon_class: 'text-danger', label_class: 'text-danger'), [:admin, @cms_contentitem], method: :delete, class: 'text-danger', data: {confirm: 'Are you sure you wish to delete this item?'} %></li>
+        <% end %>
+      </ul>
+    </div>
   <% end %>
 <% end %>
 
-<%= simple_form_for @cms_contentitem, url: submit_url,
-    html: { class: 'form-horizontal' }, wrapper: :bs3_horizontal_form, wrapper_mappings: DmAdmin::FormWrapperMappings do |f| %>
+<%= simple_form_for @cms_contentitem, url: submit_url, wrapper: :bs3_vertical_form, wrapper_mappings: DmAdmin::VerticalFormWrapperMappings do |f| %>
 
-  <%= f.error_notification message: "Please review the problems below" %>
-  <%= f.hidden_field :original_updated_on %>
-  <% toolbar = capture do %>
-    <%= link_to icons(:help), '#', class: 'btn btn-xs btn-default', data: { toggle: 'modal', target: '#tag_reference' } %>
-    <%= link_to icons(:cancel), admin_cms_page_url(@current_page), class: 'btn btn-xs btn-default' %>
-  <% end %>
-  <%= panel title: title, toolbar: toolbar do %>
-    <%= locale_tabs  do |locale| %>
-      <div class="col-sm-12">
-        <%= f.input "content_#{locale}", label: 'Content', wrapper: :bs3_vertical_form, as: :code_editor, mode: @cms_contentitem.itemtype, required: true, input_html: {style: "height: 400px;"} %>
-      </div>
-    <% end %>
-    <div class="row">
-      <div class="col-md-4">
+  <div class="row">
+    <div class="col-md-9">
+      <%= f.error_notification message: "Please review the problems below" %>
+      <%= f.hidden_field :original_updated_on %>
+
+      <%= locale_tabs  do |locale| %>
         <div class="col-sm-12">
-          <%= f.input :itemtype, label: 'Item Type', collection: CmsContentitem::CONTENT_TYPES, include_blank: false, wrapper: :bs3_vertical_form %>
+          <%= f.input "content_#{locale}", label: 'Content', wrapper: :bs3_vertical_form, as: :code_editor, mode: @cms_contentitem.itemtype, required: true, autoheight: true, input_html: {class: "CodeMirror-autoheight"} %>
         </div>
-      </div>
-      <div class="col-md-4">
-        <div class="col-sm-12">
-          <%= f.input :container, label: 'Content Name', hint: 'This is normally "body" or "sidebar" or something', wrapper: :bs3_vertical_form %>
-        </div>
-      </div>
-      <div class="col-md-4">
-        <div class="col-sm-12">
-          <%= f.input :enable_cache, as: :boolean, label: 'Cache Content', wrapper: :bs3_vertical_form %>
-        </div>
-      </div>
+      <% end %>
     </div>
-    
-    <%= submit_or_cancel cancel_url: admin_cms_page_url(@current_page), delete_url: ([:admin, @cms_contentitem] unless @cms_contentitem.new_record?), delete_confirm: 'Are you sure you wish to delete this item?' %>
-  <% end %>
+    <div class="col-md-3">
+      <% toolbar = capture do %>
+        <%= link_to icons(:help), '#', class: 'btn btn-xs btn-default', data: { toggle: 'modal', target: '#tag_reference' } %>
+      <% end %>
+      <%= panel title: icon_label(:edit, title), toolbar: toolbar do %>
+        <%= f.input :itemtype, label: 'Item Type', collection: CmsContentitem::CONTENT_TYPES, include_blank: false %>
+        <%= f.input :container, label: 'Content Name', hint: 'This is normally "body" or "sidebar" or something' %>
+        <%= f.input :enable_cache, as: :boolean, inline_label: 'Cache Content' %>
+      <% end %>
+
+      <%= submit_or_cancel save: @cms_contentitem.new_record? ? 'Create' : 'Update', cancel_url: admin_cms_page_url(@current_page) %>
+      <hr>
+    </div>
+  </div>
 <% end %>
 
 <%= render partial: 'dm_cms/admin/shared/liquid_tags_ref' %>
