--- a/cms/app/views/dm_cms/admin/cms_snippets/_form.html.erb
+++ b/cms/app/views/dm_cms/admin/cms_snippets/_form.html.erb
@@ -5,18 +5,17 @@
   <%= f.error_notification message: "Please review the problems below" %>
   <% toolbar = capture do %>
     <%= link_to icons(:help), '#', class: 'btn btn-default btn-xs', data: { toggle: 'modal', target: '#tag_reference' } %>
-    <%= link_to icons(:cancel), admin_cms_snippets_path, class: 'btn btn-default btn-xs' %>
   <% end %>
   <%= panel title: 'Edit Snippet', toolbar: toolbar do %>
     <%= f.input :slug, label: 'Slug', required: true %>
     <%= f.input :description, label: 'Description' %>
-    <%= f.input :published, as: :toggle, label: 'Publish It?' %>
     <%= f.input :itemtype, label: 'Item Type', collection: CmsContentitem::CONTENT_TYPES, include_blank: false %>
-    <%= f.input :enable_cache, as: :toggle, label: 'Cache Content' %>
+    <%= f.input :enable_cache, as: :boolean, inline_label: 'Cache Content', label: '&nbsp;'.html_safe %>
+    <%= f.input :published, as: :boolean, inline_label: 'Publish It?', label: '&nbsp;'.html_safe %>
     
     <%= locale_tabs title: '' do |locale| %>
       <div class="col-sm-12">
-        <%= f.input "content_#{locale}", label: 'Content',    required: true, wrapper: :bs3_vertical_form, as: :code_editor, input_html: {style: "height: 500px;"} %>
+        <%= f.input "content_#{locale}", label: 'Content',    required: true, wrapper: :bs3_vertical_form, as: :code_editor, autoheight: true, input_html: {class: "CodeMirror-autoheight"} %>
       </div>
     <% end %>
 
